Fixes portrait image cropping issue

--- a/js/jquery.jsgallery/jsgallery.css
+++ b/js/jquery.jsgallery/jsgallery.css
@@ -48,6 +48,7 @@
 	cursor: pointer;
 	font-size: 70px;
 	color: #FFF;
+	text-shadow: 0px 0px 5px #878787;
 }
 
 .jsgallery-container .arrow-right {
@@ -94,6 +95,7 @@
 	color: #FFF;
 	font-size: 50px;
 	cursor: pointer;
+	text-shadow: 0px 0px 10px #878787;
 	
 }
 
